Changelog
=========

1.3 - Unreleased
----------------

* Added tests and a buildout to run them easily.
  [fschulze]

1.2 - 2009-11-12
----------------

* If a package is removed from ``auto-checkout`` and wasn't explicitly
  activated, then it will be removed from the develop packages automatically.
  In existing buildouts with an older mr.developer, you have to ``reset`` the
  packages first.
  [fschulze]

* Added ``*`` wild card support for ``auto-checkout``.
  [fschulze]

* Don't bail on subversion URLs ending in a slash or a revision marker.
  [fschulze]

* Removed old way of specifying sources with ``sources-svn`` and
  ``sources-git``.
  [fschulze]

* Exit immediately when there are issues during checkout when running as
  extension.
  [fschulze]

* Use verbosity from buildout when running as extension.
  [fschulze]

* Fix buildout_dir in ``develop`` script, so it is properly escaped on
  Windows.
  [fschulze]

* Changed the output of ``list -s`` to match the one from ``status``.
  [fschulze]

* Added troubleshooting section to readme.
  [miohtama, fschulze]

* All commands have a ``-h`` and ``--help`` option now to show their help.
  [fschulze]

1.1 - 2009-08-07
----------------

* Use relative paths from the buildout directory for the ``develop`` option
  if possible. This fixes issues if your buildout path contains a space.
  [fschulze]

* Warn when trying to activate or deactivate a package which isn't checked out.
  [fschulze]

* Don't depend on elementree on Python >= 2.5, because it's builtin there.
  [fschulze]

* When checking out a source it will automatically be activated.
  [fschulze]

* Use 'sources' as the default section name for source information.
  [fschulze]

* Added support for filesystem packages without version control with the
  'fs' type.
  [fschulze]

1.0.1 - 2009-05-05
------------------

* Fixed case sensitivity of package names for several commands.
  [fschulze]

* SVN externals no longer cause a modified status.
  [fschulze]
